force-app/main/default/objects/Kiraci__c/Kiraci__c.object-meta.xml
<CustomObject>
    <label>Kiraci</label>
    <nameField>
        <label>Kiraci Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kiracilar</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>