force-app/main/default/objects/Kiraci__c/fields/Apartman__c.field-meta.xml
<CustomField>
    <fullName>Apartman__c</fullName>
    <label>Apartman</label>
    <referenceTo>Apartman__c</referenceTo>
    <relationshipLabel>Kiracilar</relationshipLabel>
    <relationshipName>Kiracilar</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>