force-app/main/default/objects/Kiraci__c/fields/Kira_Ucreti__c.field-meta.xml
<CustomField>
    <fullName>Kira_Ucreti__c</fullName>
    <label>Kira Ucreti</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>