force-app/main/default/objects/Kiraci__c/fields/Odenen_Tutar__c.field-meta.xml
<CustomField>
    <fullName>Odenen_Tutar__c</fullName>
    <label>Odenen Tutar</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>