force-app/main/default/objects/Kiraci__c/fields/Renk_Uyari__c.field-meta.xml
<CustomField>
    <fullName>Renk_Uyari__c</fullName>
    <formula>IF( ( Kira_Ucreti__c - Odenen_Tutar__c ) &gt; 4000 ,
     IMAGE( &quot;/img/samples/color_red.gif&quot;,  &quot;red&quot;,  30, 30 ) ,
      IMAGE( &quot;/img/samples/color_yellow.gif&quot;,  &quot;yellow&quot;,  30, 30 )
     )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renk Uyari</label>
    <type>Text</type>
</CustomField>