force-app/main/default/objects/Kiraci__c/fields/Uyari__c.field-meta.xml
<CustomField>
    <fullName>Uyari__c</fullName>
    <formula>IF( ( Kira_Ucreti__c &gt; Odenen_Tutar__c ) ,
&apos; Kirani odesene kardesim &apos; ,
&apos;Tesekkur ederim&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uyari</label>
    <type>Text</type>
</CustomField>